# tff

./: .gitignore  README.md  pyproject.toml
magic/: __main__.py
magic/utils/: logging.py
scripts/: setup.sh
scripts/train/: toy-data-parallel.sh  toy.sh
tff/: __init__.py  __main__.py  checkpoint.py  components.py  config.py  data.py  logging.py  metrics.py  model.py  old_train.py  routing.py  train.py  train_toy.py
tff/examples/: README.md  analyze_metrics.py  load_checkpoint.py
tff/modeling/: __init__.py  transformer.py
tff/utils/: filesystem.py
